[tool.poetry]
name = "website"
version = "0.1.0"
description = ""
authors = ["jreakin <johnreakin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0.0"
mkdocs-material = {extras = ["imaging"], version = "^9.5.41"}
mkdocs-git-revision-date-localized-plugin = "^1.2.9"
mkdocs-social-plugin = "^0.1.0"
mkdocstrings = {extras = ["python"], version = "^0.26.2"}
mkdocs-video = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
