[tool.poetry]
name = "website"
version = "0.1.0"
description = ""
authors = ["jreakin <johnreakin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0.0"
mkdocs-material = {extras = ["imaging"], version = "^9.5.41"}
mkdocs-git-revision-date-localized-plugin = "^1.2.9"
mkdocs-social-plugin = "^0.1.0"
mkdocstrings = {extras = ["python"], version = "^0.26.2"}
mkdocs-video = "^1.5.0"
mkdocs-toc-sidebar-plugin = "^0.1.0"
pymdown-extensions = "^10.11.2"
bs4 = "^0.0.2"
beautifulsoup4 = "^4.12.3"
selenium = "^4.25.0"
pydantic = {extras = ["email"], version = "^2.9.2"}
icecream = "^2.1.3"
mkdocs-blog-plugin = "^0.25"
mkdocs-meta-descriptions-plugin = "^3.0.0"
mkdocs = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
